--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
-    <link rel="stylesheet" href="landing.css" >
+    <title>Document</title>
+    <link rel="stylesheet" href="about.css" >
 </head>
 <body>
-    <nav >Some nav element</nav>
-    <div>You're in the landing page</div>
+    {{{body}}}
 </body>
 </html>
