--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,6 @@
 <div>Hey, inside HOME page</div>
+{{#each students}}
+    <p>{{this.name}}</p>
+    <p>{{this.planet}}</p>
+    <p>{{this.food}}</p>
+{{/each}}
