Added second hbs file

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,6 @@
 <div>Inside About page</div>
+{{#each instructors}}
+    <p>{{this.name}}</p>
+    <p>{{this.planet}}</p>
+    <p>{{this.food}}</p>
+{{/each}}
