--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,11 @@
 <div>Hey, inside HOME page</div>
+<form action="/home" method="POST">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit">
+</form> 
 {{#each students}}
 {{> info this}}
 {{/each}}
