changes POST redirect

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,4 @@
-<div>Inside About page</div>
-{{#each instructors}}
-    <p>{{this.name}}</p>
-    <p>{{this.planet}}</p>
-    <p>{{this.food}}</p>
-{{/each}}
+<div>That dude is 
+    <p>{{name}}</p>
+</div>    
+
