--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,9 @@
 <div>Hey, inside HOME page</div>
 <form action="/home" method="POST">
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
+  <input type="text" id="fname" name="myName" value="John"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="text" id="lname" name="MyBootcamp" value="Doe"><br><br>
   <input type="submit" value="Submit">
 </form> 
 {{#each students}}
